# nanoClaw

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  config.py  models.py  routes.py  run.py
backend/routes/: __init__.py  auth.py  conversations.py  messages.py  models.py  projects.py  stats.py  tools.py
backend/services/: __init__.py  chat.py  glm_client.py  llm_client.py
backend/tools/: __init__.py  core.py  executor.py  factory.py  services.py
backend/tools/builtin/: __init__.py  agent.py  code.py  crawler.py  data.py  file_ops.py  weather.py
backend/utils/: __init__.py  helpers.py  workspace.py
docs/: CrawlerAndTools.md  Design.md  ToolSystemDesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  constants.js  main.js
frontend/src/api/: index.js
frontend/src/components/: ChatView.vue  CloseButton.vue  CodeEditor.vue  FileExplorer.vue  FileTreeItem.vue  MessageBubble.vue  MessageInput.vue  MessageNav.vue  ModalDialog.vue  ProcessBlock.vue  ProjectManager.vue  SettingsPanel.vue  Sidebar.vue  StatsPanel.vue  ToastContainer.vue
frontend/src/composables/: useCodeEnhancement.js  useModal.js  useTheme.js  useToast.js
frontend/src/styles/: global.css  highlight.css
frontend/src/utils/: fileTree.js  fileUtils.js  format.js  highlight.js  icons.js  markdown.js
